--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "better-react-mathjax": "^2.0.2",
     "mathjax-full": "^3.2.2",
     "mathjax-react": "^2.0.1",
     "next": "13.1.1",
