--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mathjax-full": "^3.2.2",
     "mathjax-react": "^2.0.1",
     "next": "13.1.1",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-mathjax2": "^0.0.2"
