--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "better-react-mathjax": "^2.0.2",
+    "dotenv": "^16.0.3",
     "mathjax-full": "^3.2.2",
     "mathjax-react": "^2.0.1",
     "next": "13.1.1",
